--- a/book.tex
+++ b/book.tex
@@ -76,12 +76,13 @@
 \auDateFormat
 
 %% Custom commands and shortcuts
+\newcommand{\assign}{\leftarrow}
+\newcommand{\divides}{\;|\;}
 %% the latest version of this document
 \newcommand{\documentEdition}{\input{tex/version}}
+\newcommand{\notdivides}{\;\nmid\;}
 \newcommand{\RR}{\mathbf{R}}  %% set of real numbers
 \newcommand{\ZZ}{\mathbf{Z}}  %% set of integers
-\newcommand{\divides}{\;|\;}
-\newcommand{\notdivides}{\;\nmid\;}
 
 \makeindex
 
@@ -109,8 +110,8 @@
 % Setting the TOC depth: only list chapters and sections
 \setcounter{tocdepth}{1}
 \tableofcontents
-%% \listofalgorithms
-%% \addcontentsline{toc}{chapter}{List of Algorithms}
+\listofalgorithms
+\addcontentsline{toc}{chapter}{List of Algorithms}
 %% \listoffigures
 %% \addcontentsline{toc}{chapter}{List of Figures}
 %% \listoftables
