--- a/tex/unique-factorization.tex
+++ b/tex/unique-factorization.tex
@@ -381,6 +381,7 @@ term-by-term to get $p^2 \leq st = n$ and therefore $p \leq \sqrt{n}$.
 \end{proof}
 
 \begin{corollary}
+\label{cor:unique_factorization:n_prime_iff_not_divisible_by_prime_leq_sqrt_n}
 An integer $p > 1$ is prime if and only if it is not divisible by any
 prime $q$, where $1 < q \leq \sqrt{p}$.
 \end{corollary}
@@ -389,3 +390,65 @@ prime $q$, where $1 < q \leq \sqrt{p}$.
 Follows from the definition of prime and
 Theorem~\ref{thm:unique_factorization:prime_divisor_leq_sqrt_n}.
 \end{proof}
+
+\begin{algorithm}[!htpb]
+%% no semicolon at end of pseudocode statements
+\dontprintsemicolon
+%% data section
+\SetKwInOut{Input}{Input}
+\SetKwInOut{Output}{Output}
+%% input/output
+\Input{An integer $n > 3$.}
+\Output{A list of all primes $\leq n$.}
+\BlankLine
+%% algorithm body
+$A \assign [0, 1, 2, \dots, n]$ \tcc*[f]{elements of $A$ indexed as $a_i$}\;
+$j \assign 2$\;
+\While{$j^2 \leq n$ \nllabel{alg:Eratosthenes:all_integers_leq_sqrt_n}}{
+  \If{$a_j \neq 0$ \nllabel{alg:Eratosthenes:primality_test}}{
+    $i \assign 2$ \nllabel{alg:Eratosthenes:eliminate_multiples_start}\;
+    \While{$ij \leq n$}{
+      $a_{i \times j} \assign 0$\;
+      $i \assign i + 1$ \nllabel{alg:Eratosthenes:eliminate_multiples_end}\;
+    }
+  }
+  $j \assign j + 1$ \nllabel{alg:Eratosthenes:increment_j}\;
+}
+$P \assign [\,]$ \nllabel{alg:Eratosthenes:get_primes_start}\;
+\For{$i \assign 2, \dots, n$}{
+  \If{$a_i \neq 0$}{
+    append $a_i$ to $P$\;
+  }
+}
+\Return $P$ \nllabel{alg:Eratosthenes:get_primes_end}\;
+\caption{The Sieve of Eratosthenes.}
+\label{alg:unique_factorization:sieve_eratosthenes}
+\end{algorithm}
+
+Eratosthenes used
+Corollary~\ref{cor:unique_factorization:n_prime_iff_not_divisible_by_prime_leq_sqrt_n}
+as the basis of a clever technique, called the ``Sieve of
+Eratosthenes,'' for finding all primes below a given integer
+$n > 1$. Start by listing all the integers from 2 to $n$. Then
+eliminate all the composite numbers by striking out all multiples
+$2p, 3p, 4p, 5p, \dots$ of the primes $p \leq \sqrt{n}$. The remaining
+integers on the list are primes.
+
+The Sieve of Eratosthenes is summarized in
+Algorithm~\ref{alg:unique_factorization:sieve_eratosthenes}. The loop
+starting from line~\ref{alg:Eratosthenes:all_integers_leq_sqrt_n}
+considers all integers $\leq \sqrt{n}$. Its worst-case runtime is
+$O(\sqrt{n})$. Line~\ref{alg:Eratosthenes:primality_test} is a
+primality test. If $a_j \neq 0$, then $a_j$ is
+prime. Lines~\ref{alg:Eratosthenes:eliminate_multiples_start}
+to~\ref{alg:Eratosthenes:eliminate_multiples_end} eliminate all
+multiples of the prime $a_j$, with runtime $O(\sqrt{n})$. Any multiple
+of $a_j$ is set to $0$. In total,
+lines~\ref{alg:Eratosthenes:all_integers_leq_sqrt_n}
+to~\ref{alg:Eratosthenes:increment_j} has a runtime of $O(\sqrt{n}
+\times \sqrt{n}) = O(n)$. Lines~\ref{alg:Eratosthenes:get_primes_start}
+to~\ref{alg:Eratosthenes:get_primes_end} fetch all the primes
+remaining in the list $A$. The loop in this fetching step has runtime
+$O(n)$. In total, the worst-case runtime of
+Algorithm~\ref{alg:unique_factorization:sieve_eratosthenes} is
+$O(n + n) = O(2n)$.
