rename the section "The Fundamental Theorem of Arithmic" to "The Euclidean algorithm"

--- a/tex/unique-factorization.tex
+++ b/tex/unique-factorization.tex
@@ -166,10 +166,9 @@ $r$ and $q$ are unique.
 
 
 %%-----------------------------------------------------------------------%%
-%%--- The Fundamental Theorem of Arithmetic -----------------------------%%
+%%--- The Euclidean algorithm -------------------------------------------%%
 
-\section{The Fundamental Theorem of Arithmetic}
-\index{Fundamental Theorem of Arithmetic}
+\section{The Euclidean algorithm}
 
 Let $a,b \in \ZZ$ such that at least one of $a$ or $b$ is different
 from zero. The
