--- a/tex/unique-factorization.tex
+++ b/tex/unique-factorization.tex
@@ -217,6 +217,145 @@ two terms in the equation $a = b + c$, then $n$ also divides the
 third term.
 \end{proof}
 
+\begin{lemma}
+\label{lem:unique_factorization:gcd(a,b)_eq_gcd(b,r)}
+Let $a,b,q,r \in \ZZ$ with $b > 0$ and $0 \leq r < b$ such that
+$a = bq + r$. Then $\gcd(a,b) = \gcd(b,r)$.
+\end{lemma}
+
+\begin{proof}
+Let $a,b,q,r \in \ZZ$ such that $a = bq + r$ where $b > 0$ and
+$0 \leq r < b$. Let $d = \gcd(a,b)$, then it clearly follows that
+$d \divides bq$ as well. By
+Theorem~\ref{thm:unique_factorization:divides_any_two_terms_then_divides_third},
+$d$ also divides $r$ as required.
+\end{proof}
+
+The GCD of two integers can be found by listing all their positive
+divisors and choosing the largest one common to both. This method is
+cumbersome for large integers. In the seventh book of the
+\emph{Elements}, Euclid presents an efficient method involving
+repeated application of the division
+algorithm~(Theorem~\ref{thm:unique_factorization:division_algorithm}),
+called the Euclidean algorithm. Let $a,b \in \ZZ$. Since
+$\gcd(|a|, |b|) = \gcd(a,b)$, there is no loss of generality in
+assuming that $a \geq b > 0$. First, apply the division algorithm to
+$a,b$ to get
+\[
+a
+=
+bq_1 + r_1, \qquad\qquad 0 \leq r_1 < b.
+\]
+If $r_1 = 0$, then $b \divides a$ and $\gcd(a,b) = b$. Otherwise,
+$r_1 \neq 0$ so divide $b$ by $r_1$ to produce
+$q_2, r_2 \in \ZZ$ satisfying
+\[
+b
+=
+r_1 q_2 + r_2, \qquad\qquad 0 \leq r_2 < r_1.
+\]
+If $r_2 = 0$, then we are done. Otherwise, we repeat the same process
+to obtain
+\[
+r_1
+=
+r_2 q_3 + r_3, \qquad\qquad 0 \leq r_3 < r_2.
+\]
+We continue applying the division process until a zero remainder
+appears, say, at the $(n+1)$-th stage where $r_{n-1}$ is divided by
+$r_n$. Sooner or later, a zero remainder appears since the decreasing
+sequence $b > r_1 > r_2 > \cdots \geq 0$ cannot contain more than $b$
+integers. We then end up with the following system of equations:
+%
+\begin{align*}
+a &= bq_1 + r_1, \qquad\qquad 0 < r_1 < b \\
+b &= r_1 q_2 + r_2, \qquad\qquad 0 < r_2 < r_1 \\
+r_1 &= r_2 q_3 + r_3, \qquad\qquad 0 < r_3 < r_2 \\
+& \vdots \\
+r_{n-2} &= r_{n-1} q_n + r_n, \qquad\qquad 0 < r_n < r_{n-1} \\
+r_{n-1} &= r_n q_{n+1} + 0.
+\end{align*}
+%
+The Euclidean algorithm states that $r_n$, the last nonzero remainder
+which appears in this manner, is equal to $\gcd(a,b)$.
+
+\begin{theorem}
+\label{thm:unique_factorization:Euclidean_algorithm}
+\textbf{Euclidean algorithm.}
+\index{Euclidean algorithm}
+Let $a$ and $b$ be positive integers with $a \geq b$. If $b \divides a$,
+then $\gcd(a,b) = b$. If $b \notdivides a$, then apply the division
+algorithm repeatedly as follows:
+\[
+\begin{array}{rclclccccrclcl}
+a   &=& bq_0    &+& r_0 &&&& 0 &<&    r_0 &<& b \\
+b   &=& r_0 q_1 &+& r_1 &&&& 0 &\leq& r_1 &<& r_0 \\
+r_0 &=& r_1 q_2 &+& r_2 &&&& 0 &\leq& r_2 &<& r_1 \\
+r_1 &=& r_2 q_3 &+& r_3 &&&& 0 &\leq& r_3 &<& r_2 \\
+& \vdots
+\end{array}
+\]
+This process ends when a remainder of $0$ is obtained. That is,
+for some integer $t$ we have
+\[
+\begin{array}{rclclccccrclcl}
+r_{t-2} &=& r_{t-1} q_t &+& r_t &&&& 0 &<& r_t &<& r_{t-1} \\
+r_{t-1} &=& r_t q_{t+1} &+& 0
+\end{array}
+\]
+Then $r_t = \gcd(a,b)$.
+\end{theorem}
+
+\begin{proof}
+If $b \divides a$, then $a = bq + 0$ for some integer $q$. By
+Lemma~\ref{lem:unique_factorization:gcd(a,b)_eq_gcd(b,r)}, we have
+$\gcd(a,b) = \gcd(b,0) = b$ and we are done. In case
+$b \notdivides a$, then repeated application of
+Lemma~\ref{lem:unique_factorization:gcd(a,b)_eq_gcd(b,r)} to the list
+of divisions yields
+\[
+\gcd(a,b)
+=
+\gcd(b, r_0)
+=
+\gcd(r_0, r_1)
+=
+\cdots
+=
+\gcd(r_t, 0)
+=
+r_t
+\]
+as required.
+\end{proof}
+
+The Euclidean algorithm can be directly translated into algorithmic
+form as follows:
+
+\begin{algorithm}[!htpb]
+%% no semicolon at end of pseudocode statements
+\dontprintsemicolon
+%% data section
+\SetKwInOut{Input}{Input}
+\SetKwInOut{Output}{Output}
+%% input/output
+\Input{Two integers $a > 0$ and $b \geq 0$.}
+\Output{The greatest common divisor of $a,b$.}
+\BlankLine
+%% algorithm body
+$x \assign a$\;
+$y \assign b$\;
+\While{$y \neq 0$}{
+  $r \assign x \mod y$\;
+  $x \assign y$\;
+  $y \assign r$\;
+}
+\Return $x$\;
+\caption{The Euclidean algorithm.}
+\index{Euclidean algorithm}
+\label{alg:unique_factorization:Euclidean_algorithm}
+\end{algorithm}
+
 \begin{theorem}
 \label{thm:unique_factorization:Bezout's_identity}
 \textbf{B\'ezout's identity.}\index{B\'ezout's identity}
