write the remainder as r = a mod b

--- a/tex/unique-factorization.tex
+++ b/tex/unique-factorization.tex
@@ -164,6 +164,9 @@ $r - r^\prime = 0$, thus $r = r^\prime$ and $q = q^\prime$. Therefore
 $r$ and $q$ are unique.
 \end{proof}
 
+The remainder $r$ is also written as $r = a \bmod b$\index{$\bmod$}. The
+operator $\bmod$ means, ``the remainder when $a$ is divided by $b$.''
+
 
 %%-----------------------------------------------------------------------%%
 %%--- The Euclidean algorithm -------------------------------------------%%
