document the list P in the Sieve of Eratosthenes

--- a/tex/unique-factorization.tex
+++ b/tex/unique-factorization.tex
@@ -556,7 +556,7 @@ $j \assign 2$\;
   }
   $j \assign j + 1$ \nllabel{alg:Eratosthenes:increment_j}\;
 }
-$P \assign [\,]$ \nllabel{alg:Eratosthenes:get_primes_start}\;
+$P \assign [\,]$ \nllabel{alg:Eratosthenes:get_primes_start} \tcc*[f]{list of primes}\;
 \For{$i \assign 2, \dots, n$}{
   \If{$a_i \neq 0$}{
     append $a_i$ to $P$\;
