prime factorization by trial division

--- a/book.tex
+++ b/book.tex
@@ -80,6 +80,7 @@
 \newcommand{\divides}{\;|\;}
 %% the latest version of this document
 \newcommand{\documentEdition}{\input{tex/version}}
+\DeclareMathOperator*{\length}{length}
 \newcommand{\notdivides}{\;\nmid\;}
 \newcommand{\RR}{\mathbf{R}}  %% set of real numbers
 \newcommand{\ZZ}{\mathbf{Z}}  %% set of integers
