Sage code listing for the set of integers

--- a/tex/unique-factorization.tex
+++ b/tex/unique-factorization.tex
@@ -22,6 +22,17 @@ by the
 principle states that any nonempty set of positive integers
 contains a least element.
 
+\begin{lstlisting}
+sage: ZZ
+Integer Ring
+sage: type(ZZ)
+<type 'sage.rings.integer_ring.IntegerRing_class'>
+sage: Integer  # Sage integer
+<type 'sage.rings.integer.Integer'>
+sage: int  # Python integer
+<type 'int'>
+\end{lstlisting}
+
 \begin{theorem}
 \label{thm:unique_factorization:well_ordering_principle}
 \textbf{Well-ordering principle.}
