--- a/tex/unique-factorization.tex
+++ b/tex/unique-factorization.tex
@@ -1001,6 +1001,38 @@ $O(n)$. In total, the worst-case runtime of
 Algorithm~\ref{alg:unique_factorization:sieve_eratosthenes} is
 $O(n + n) = O(2n)$.
 
+\begin{lstlisting}
+sage: def eratosthenes(n):
+...       """
+...       The Sieve of Eratosthenes.
+...       """
+...       A = [0..n]
+...       j = 2
+...       while j^2 <= n:
+...           if A[j] != 0:
+...               i = 2
+...               while i*j <= n:
+...                   A[i*j] = 0
+...                   i += 1
+...           j += 1
+...       P = []
+...       for i in range(2, n+1):
+...           if A[i] != 0:
+...               P.append(A[i])
+...       return P
+sage: eratosthenes(50)
+[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47]
+sage: n = randint(2, 10^6)
+sage: P = eratosthenes(n)
+sage: all(map(is_prime, P))
+True
+sage: all(map(is_prime, prime_range(n)))
+True
+sage:
+sage: P == prime_range(n)
+True
+\end{lstlisting}
+
 The Fundamental Theorem of
 Arithmetic~(Theorem~\ref{thm:unique_factorization:Fundamental_Theorem_Arithmetic})
 guarantees that each integer $n > 1$ can be uniquely factored into
