algorithm for factorization using the Sieve of Eratosthenes: add a note about reworking this algorithm

--- a/tex/unique-factorization.tex
+++ b/tex/unique-factorization.tex
@@ -1058,6 +1058,7 @@ none of the $d_i$ is a factor of $n$. If any $d_i$ divides $n$, then
 repeatedly divide $n$ by $d_i$ as many times as possible. The
 procedure is summarized in
 Algorithm~\ref{alg:unique_factorization:trial_division}.
+{\color{red}{This algorithm is wrong; rework it!}}
 
 \begin{algorithm}[!htpb]
 %% no semicolon at end of pseudocode statements
@@ -1088,3 +1089,22 @@ $P \assign [\,]$ \tcc*[f]{list of prime factors of $n$}\;
 \index{trial division}
 \label{alg:unique_factorization:trial_division}
 \end{algorithm}
+
+%% \begin{lstlisting}
+%% sage: n = randint(2, 10^10)
+%% sage: def my_factor(n):
+%% ...       """
+%% ...       A simple factorization routine that uses the Sieve of Eratosthenes.
+%% ...       """
+%% ...       N = Integer(n)
+%% ...       D = prime_range(floor(sqrt(n)))
+%% ...       D.append(next_prime(D[-1]))
+%% ...       P = []
+%% ...       for i in range(0, len(D)):
+%% ...           while gcd(D[i], N) > 1:
+%% ...               P.append(D[i])
+%% ...               N = N / D[i]
+%% ...       if len(P) == 0:
+%% ...           return N
+%% ...       return P
+%% \end{lstlisting}
