mystyle.sty: don't number each line in a code listing

--- a/mystyle.sty
+++ b/mystyle.sty
@@ -54,8 +54,8 @@
   basicstyle={\fontsize{10pt}{10pt}\ttfamily},
   aboveskip=0.5em,
   belowskip=0.5em,
-  numbers=left,
-  numberstyle=\footnotesize
+  %% numbers=left,
+  %% numberstyle=\footnotesize
 }
 \definecolor{dblackcolor}{rgb}{0.0,0.0,0.0}
 \definecolor{dbluecolor}{rgb}{0.01,0.02,0.7}
