book.tex: add index to table of contents

--- a/book.tex
+++ b/book.tex
@@ -49,6 +49,8 @@
 %% \backmatter
 %% \bibliographystyle{bibliography.bst}
 %% \bibliography{bibliography.bib}
+\cleardoublepage
+\addcontentsline{toc}{chapter}{Index}
 \printindex
 
 \end{document}
