book.tex: use alphabetic page numbering for pages preceding the table of the contents

--- a/book.tex
+++ b/book.tex
@@ -9,6 +9,8 @@
 
 \begin{document}
 
+\pagenumbering{alph}
+
 \title{\Huge{\bf{Primes and Factorization}}}
 \author{\Large{Minh Van Nguyen}}
 \date{Version~\documentEdition}
