--- a/book.tex
+++ b/book.tex
@@ -29,8 +29,10 @@
 % Setting the TOC depth: only list chapters and sections
 \setcounter{tocdepth}{1}
 \tableofcontents
+\let\cleardoublepage\clearpage
 \listofalgorithms
 \addcontentsline{toc}{chapter}{List of Algorithms}
+\let\cleardoublepage\clearpage
 %% \listoffigures
 %% \addcontentsline{toc}{chapter}{List of Figures}
 %% \listoftables
