mystyle.sty: set the PDF title, author and subject in the hyperref setup

--- a/mystyle.sty
+++ b/mystyle.sty
@@ -13,13 +13,6 @@
 
 \usepackage{amsmath,amssymb,amsthm}
 \usepackage{graphicx,url}
-\usepackage{hyperref}
-\hypersetup{
-  colorlinks=true,%
-  linkcolor=black,%
-  citecolor=black,%
-  urlcolor=black
-}
 \usepackage{makeidx}
 \usepackage{xspace}
 \usepackage{enumerate}
@@ -98,3 +91,13 @@
 \newcommand{\ZZ}{\mathbf{Z}}  %% set of integers
 
 \makeindex
+\usepackage{hyperref}
+\hypersetup{
+  pdftitle={Primes and Factorization},%
+  pdfauthor={Minh Van Nguyen},%
+  pdfsubject={mathematics},%
+  colorlinks=true,%
+  linkcolor=black,%
+  citecolor=black,%
+  urlcolor=black
+}
