--- a/mystyle.sty
+++ b/mystyle.sty
@@ -56,11 +56,11 @@
   keywordstyle={\ttfamily\color{dbluecolor}\bfseries},
   stringstyle={\ttfamily\color{dgraycolor}\bfseries},
   language=Sage,
-  basicstyle={\fontsize{10pt}{10pt}\ttfamily},
+  basicstyle={\fontsize{9pt}{9pt}\ttfamily},
   aboveskip=0.5em,
   belowskip=0.5em,
   %% numbers=left,
-  %% numberstyle=\footnotesize
+  numberstyle=\footnotesize
 }
 \definecolor{dblackcolor}{rgb}{0.0,0.0,0.0}
 \definecolor{dbluecolor}{rgb}{0.01,0.02,0.7}
