book.tex: avoid using nested braces

--- a/book.tex
+++ b/book.tex
@@ -18,8 +18,8 @@
 
 \pagenumbering{alph}
 
-\title{\Huge{\bf{Primes and Factorization}}}
-\author{\Large{Minh Van Nguyen}}
+\title{\Huge\bf Primes and Factorization}
+\author{\Large Minh Van Nguyen}
 \date{%
   Version~\documentEdition \\
   \today
