book.tex: use \backmatter macro to start the back matter

--- a/book.tex
+++ b/book.tex
@@ -52,7 +52,8 @@
 \appendix
 \input{tex/license-gfdl.tex}
 
-\cleardoublepage
+%% Back matter
+\backmatter
 \addcontentsline{toc}{chapter}{Index}
 \printindex
 
