--- a/style/mystyle.sty
+++ b/style/mystyle.sty
@@ -48,10 +48,6 @@
 \usetikzlibrary{trees}
 \usepackage{subfigure}
 
-%% The following is a brute-force way to prevent the headers
-%% from getting transformed into all-caps
-\renewcommand\MakeUppercase{}
-
 %% For typesetting code listings
 \usepackage{listings}
 \lstdefinelanguage{Sage}[]{Python}
@@ -93,15 +89,22 @@
 }
 \isoDateFormat
 
-%% Custom commands and shortcuts
+%% New custom commands and shortcuts
 \newcommand{\assign}{\leftarrow}
 \newcommand{\divides}{\;|\;}
 %% the latest version of this document
 \newcommand{\documentEdition}{\input{tex/version}}
-\DeclareMathOperator*{\length}{length}
 \newcommand{\notdivides}{\;\nmid\;}
 \newcommand{\RR}{\mathbf{R}}  %% set of real numbers
 \newcommand{\ZZ}{\mathbf{Z}}  %% set of integers
+
+%% Custom math operators
+\DeclareMathOperator*{\length}{length}
+
+%% Renewed commands
+%% The following is a brute-force way to prevent the headers
+%% from getting transformed into all-caps
+\renewcommand\MakeUppercase{}
 
 \makeindex
 \usepackage{hyperref}
